--- a/src/view/SB_TelaInicial.fxml
+++ b/src/view/SB_TelaInicial.fxml
@@ -7,9 +7,18 @@
 
 <AnchorPane prefHeight="700.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Button layoutX="468.0" layoutY="432.0" mnemonicParsing="false" prefHeight="75.0" prefWidth="265.0" style=" -fx-background-color: transparent; -fx-background-image: url('Model/resources/BotaoAmareloSolto.png');" text="Pontuação" />
-      <Button layoutX="468.0" layoutY="326.0" mnemonicParsing="false" prefHeight="75.0" prefWidth="265.0" style="-fx-background-image: url('Model/resources/BotaoVerde1');" text="Iniciar" />
-      <Button layoutX="468.0" layoutY="539.0" mnemonicParsing="false" prefHeight="75.0" prefWidth="265.0" style="-fx-background-image: url('Model/resources/BotaoVerde1');" text="Sair" />
+      <Button layoutX="468.0" layoutY="432.0" mnemonicParsing="false" prefHeight="77.0" prefWidth="267.0" style="-fx-background-image: url('Model/resources/BotaoAmareloSolto.png'); -fx-background-color: transparent;" text="Pontuação" textFill="#111111">
+         <font>
+            <Font name="Arial Bold" size="20.0" />
+         </font></Button>
+      <Button layoutX="468.0" layoutY="326.0" mnemonicParsing="false" prefHeight="77.0" prefWidth="267.0" style="-fx-background-image: url('Model/resources/BotaoVerdeSolto.png'); -fx-background-color: transparent;" text="Iniciar" textFill="WHITE">
+         <font>
+            <Font name="Arial Bold" size="20.0" />
+         </font></Button>
+      <Button layoutX="468.0" layoutY="539.0" mnemonicParsing="false" prefHeight="77.0" prefWidth="267.0" style="-fx-background-image: url('Model/resources/BotaoAmareloSolto.png'); -fx-background-color: transparent;" text="Sair">
+         <font>
+            <Font name="Arial Bold" size="20.0" />
+         </font></Button>
       <Label alignment="CENTER" layoutX="400.0" layoutY="63.0" prefHeight="200.0" prefWidth="400.0" text="City Last Light" textAlignment="CENTER">
          <font>
             <Font name="Segoe UI Bold" size="53.0" />
