--- a/src/model/SB_TelaInicial.fxml
+++ b/src/model/SB_TelaInicial.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="700.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="model.CityLastLightBotao">
+<AnchorPane prefHeight="700.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="model.SceneBuilderBTN">
    <children>
       <Button fx:id="Iniciar" layoutX="468.0" layoutY="326.0" mnemonicParsing="false" onMouseEntered="#SetBotaoAcionadoIni" onMouseExited="#SetBotaoSoltoIni" onMousePressed="#SetBotaoPressionadoIni" onMouseReleased="#SetBotaoSoltoIni" prefHeight="77.0" prefWidth="267.0" style="-fx-background-image: url('Model/resources/BotaoVerdeSolto.png'); -fx-background-color: transparent;" text="Iniciar" textFill="WHITE">
          <font>
